added new API for category and forntend module and assets
